fix logo BBB on small devices

--- a/css/2-layouts/home.scss
+++ b/css/2-layouts/home.scss
@@ -274,6 +274,11 @@ footer.home {
     @include media($mobile) {
       float: right;
     }
+    @include media($small-mobile){
+      display: block;
+      float: none;
+      margin-top: 55px;
+    }
   }
   ul {
     margin-top: 0.3em;
